clean-up gitignore and README

--- a/project.properties
+++ b/project.properties
@@ -1,4 +1,4 @@
-name=env-sensor-kit
+name=air-quality-kit
 dependencies.OLED_Display_128X64=1.0.0
 dependencies.Grove_Air_quality_Sensor=1.0.1
 dependencies.Adafruit_BME280=1.1.5
